# syntactic-class

./: README.md  syntactic-class.cabal
src/test/: Main.hs
