cabal-version: 3.0
name: syntactic-class
version: 0
category: Text, Builders, Formatting, Parsing, Syntax
synopsis: Lawful typeclass for canonical formatting and parsing
description:
  Library providing a lawful typeclass for canonical formatting and parsing of types. It addresses the shortcomings of `Show` and `Read`, which lack clear laws, produce confusing output, and rely on `String`. Instead, "syntactic-class" offers a modern, efficient, and consistent approach to rendering and parsing types in their standard textual forms.

  The `Syntactic` typeclass ensures lawfulness (parsing a rendered value recovers the original), focuses on canonical notations and leverages "[text-builder](https://hackage.haskell.org/package/text-builder)" for formatting and "[attoparsec](https://hackage.haskell.org/package/attoparsec)" for parsing. It supports multiple notations via newtype wrappers (e.g., `InIso8601` for dates) and integrates well with Haskell's ecosystem, making it ideal for practical use beyond debugging.

homepage: https://github.com/nikita-volkov/syntactic-class
bug-reports: https://github.com/nikita-volkov/syntactic-class/issues
author: Nikita Volkov <nikita.y.volkov@mail.ru>
maintainer: Nikita Volkov <nikita.y.volkov@mail.ru>
copyright: (c) 2025, Nikita Volkov
license: MIT
license-file: LICENSE
extra-doc-files:
  CHANGELOG.md
  LICENSE
  README.md

source-repository head
  type: git
  location: https://github.com/nikita-volkov/syntactic-class

common base
  default-language: Haskell2010
  default-extensions:
    BangPatterns
    BlockArguments
    ConstraintKinds
    DataKinds
    DefaultSignatures
    DeriveDataTypeable
    DeriveFoldable
    DeriveFunctor
    DeriveGeneric
    DeriveTraversable
    DerivingStrategies
    EmptyDataDecls
    FlexibleContexts
    FlexibleInstances
    FunctionalDependencies
    GADTs
    GeneralizedNewtypeDeriving
    LambdaCase
    LiberalTypeSynonyms
    MagicHash
    MultiParamTypeClasses
    MultiWayIf
    NoImplicitPrelude
    NoMonomorphismRestriction
    NumericUnderscores
    OverloadedStrings
    ParallelListComp
    PatternGuards
    QuasiQuotes
    RankNTypes
    RecordWildCards
    ScopedTypeVariables
    StandaloneDeriving
    StrictData
    TemplateHaskell
    TupleSections
    TypeApplications
    TypeFamilies
    TypeOperators
    UnboxedTuples
    ViewPatterns

common executable
  import: base
  ghc-options:
    -O2
    -threaded
    -with-rtsopts=-N
    -rtsopts
    -funbox-strict-fields

common test
  import: base
  ghc-options:
    -threaded
    -with-rtsopts=-N

library
  import: base
  hs-source-dirs: src/library
  exposed-modules: SyntacticClass
  other-modules:
    SyntacticClass.Class
    SyntacticClass.Formats.InFixedBinary
    SyntacticClass.Formats.InFixedBinary.Attoparsec
    SyntacticClass.Formats.InIso8601
    SyntacticClass.Formats.InIso8601.Builders
    SyntacticClass.Formats.InIso8601.Core
    SyntacticClass.Formats.InIso8601.Instances.Day
    SyntacticClass.Formats.InIso8601.Instances.UTCTime
    SyntacticClass.Instances.LazyText
    SyntacticClass.Instances.Text
    SyntacticClass.Instances.Uuid
    SyntacticClass.Prelude

  build-depends:
    QuickCheck >=2.14 && <3,
    attoparsec >=0.14 && <0.15,
    attoparsec-data ^>=1.0.5.4,
    base >=4.11 && <5,
    bytestring >=0.10 && <0.13,
    text >=1.0 && <3,
    text-builder ^>=1,
    time >=1.12 && <2,
    transformers >=0.5 && <0.7,
    uuid >=1.3 && <2,

test-suite test
  import: test
  type: exitcode-stdio-1.0
  hs-source-dirs: src/test
  main-is: Main.hs
  other-modules:
  build-tool-depends:
    hspec-discover:hspec-discover >=2 && <3

  build-depends:
    QuickCheck >=2.14 && <3,
    hspec >=2.11 && <3,
    quickcheck-instances >=0.3.28 && <0.4,
    rerebase >=1.21.2 && <2,
    syntactic-class,
